kubernetes/apps/production/packing-api/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: packing-api
  namespace: production
  labels:
    app.kubernetes.io/name: packing-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: packing-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
